Added parsing function and a sample config file

--- a/ConfigParser/ConfigParser/ConfigParser.vcxproj
+++ b/ConfigParser/ConfigParser/ConfigParser.vcxproj
@@ -151,7 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ConfigParser.cpp" />
+    <ClCompile Include="cfgparser.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cfgparser.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sample.ini">
+      <DeploymentContent>false</DeploymentContent>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
